gcc/testsuite/rust/rustc/ui/type/type-check/issue-116967-cannot-coerce-returned-result.rs
fn foo() -> Result<String, ()> {
    let out: Result<(), ()> = Ok(());
    out // { dg-error ".E0308." "" { target *-*-* } }
}

fn main() {}

